# crier

./: CHANGELOG  Cargo.toml  README.adoc
crier-lib/: Cargo.toml
crier-lib/src/: io.rs  lib.rs  log.rs  meta.rs  rss.rs  tests.rs
crier-lib/src/io/: fs.rs
crier-lib/testdata/: test.rss.xml  test2.xml
src/: cache.rs  io.rs  lib.rs  main.rs  mem.rs  meta.rs  tests.rs
src/io/: fs.rs
testdata/: test.atom.xml
