[package]
name = "crier"
version = "0.0.1"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rss = "^2.0.3"
feed-rs = "^2.0"
rss = "^2.0"
#activitypub_federation = "^0.4.0"
#json-ld = "^0.14.1"
digest = "^0.10.7"
clap = "2.34.0"
#sha2 = "^0.10.8"
rs_sha512 = "^0.1.3"
http = "^1.0"
chrono = "^0.4"
uuid = "^1.9"
itertools = "^0.13"
serde = "^1.0"
atom_syndication = "^0.12"

#[dependencies.quick-xml]
#version = "^0.31"
#features = ["serialize"]

[patch.crates-io]
#atom_syndication = { path = "/home/lash/src/contrib/atom_syndication" }
#atom_syndication = { git = "git://holbrook.no/contrib/atom_syndication", rev="fab6f733f6481ecfcbd6a76074f1038c79c854ae" } #branch="lash/entry-to-xml" 
atom_syndication = { git = "git://holbrook.no/contrib/atom_syndication", rev="9985c1610b2b819f5bd2f7a719567ee0b5419b85" } #branch="lash/entry-fromstr"

[dev-dependencies]
tempfile = "3.3.0"
mediatype = "^0.19"
quick-xml = "^0.31"

[features]
fs = []
