[package]
name = "crier-bin"
version = "0.0.1"
edition = "2021"
rust-version = "1.79"
authors = ["Louis Holbrook <dev@holbrook.no>"]

[dependencies]
clap = "2.34.0"
crier = { path = "./crier-lib", features = ["fs"] }

[dependencies.env_logger]
version = "^0.9"
optional = true

[dependencies.log]
version = "^0.4"
optional = true

[patch.crates-io]
#atom_syndication = { path = "/home/lash/src/contrib/atom_syndication" }
atom_syndication = { git = "git://holbrook.no/contrib/atom_syndication", rev="9985c1610b2b819f5bd2f7a719567ee0b5419b85" } #branch="lash/entry-fromstr"

[features]
logging = ["log", "env_logger"]
