[package]
name = "crier-bin"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.79"
description = "Chronologically aggregate atom and rss feeds into a single atom feed."
authors = ["Louis Holbrook <dev@holbrook.no>"]

[dependencies]
clap = "2.34.0"
crier = { path = "./crier-lib", features = ["fs"] }
log = "^0.4"
env_logger = "^0.9"


[patch.crates-io]
#atom_syndication = { path = "/home/lash/src/contrib/atom_syndication" }
atom_syndication = { git = "git://holbrook.no/contrib/atom_syndication", rev="9985c1610b2b819f5bd2f7a719567ee0b5419b85" } #branch="lash/entry-fromstr"
