[package]
name = "crier"
version = "0.0.1"
edition = "2021"
rust-version = "1.79"
description = "Chronologically aggregate atom and rss feeds into a single atom feed."
documentation = "https://defalsify.org/pub/doc/crier/0.0.1/crier"
homepage = "https://defalsify.org/git/crier"
authors = ["Louis Holbrook <dev@holbrook.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "^0.10.7"
rs_sha512 = "^0.1.3"
http = "^1.0"
chrono = "^0.4"
itertools = "^0.13"
serde = "^1.0"
atom_syndication = "^0.12"
log = "^0.4"
env_logger = "^0.9"

[dependencies.uuid]
version = "^1.9"
features = ["v4"]

[dependencies.rss]
version = "^2.0"
features = ["atom"]

[patch.crates-io]
atom_syndication = { git = "git://holbrook.no/contrib/atom_syndication", rev="9985c1610b2b819f5bd2f7a719567ee0b5419b85" } #branch="lash/entry-fromstr"

[dev-dependencies]
tempfile = "3.3.0"
mediatype = "^0.19"
quick-xml = "^0.31"


[features]
fs = []
